// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`FieldError renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "This field is required",
          ],
          "props": {
            "style": {
              "color": "#BD1111",
              "fontSize": 12,
            },
          },
          "type": "Text",
        },
      ],
      "props": {
        "style": {
          "marginLeft": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "flexDirection": "row",
      "marginVertical": 2,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`FieldError renders with icon 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Error message",
          ],
          "props": {
            "style": {
              "color": "#BD1111",
              "fontSize": 12,
            },
          },
          "type": "Text",
        },
      ],
      "props": {
        "style": {
          "marginLeft": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "flexDirection": "row",
      "marginVertical": 2,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
